# naoxophone

./: .gitignore  README.md
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/nao_control_tutorial_1/: InterpolateJoints.h  InterpolateJointsRequest.h  InterpolateJointsResponse.h  MoveJoints.h  MoveJointsRequest.h  MoveJointsResponse.h  jointAngle.h  jointAngleRequest.h  jointAngleResponse.h  timedInterpolation.h  timedInterpolationRequest.h  timedInterpolationResponse.h
devel/include/nao_control_tutorial_2/: MoveJoints.h  MoveJointsRequest.h  MoveJointsResponse.h
devel/include/tutorial7/: blinkAction.h  blinkActionFeedback.h  blinkActionGoal.h  blinkActionResult.h  blinkFeedback.h  blinkGoal.h  blinkResult.h
devel/lib/nao_control_tutorial_1/: tut_05
devel/lib/pkgconfig/: naoXophone.pc  nao_control_tutorial_1.pc  nao_control_tutorial_2.pc  tutorial_1.pc  tutorial_2.pc  tutorial_3.pc
devel/share/naoXophone/cmake/: naoXophoneConfig.cmake
devel/share/nao_control_tutorial_1/cmake/: nao_control_tutorial_1-msg-extras.cmake  nao_control_tutorial_1-msg-paths.cmake  nao_control_tutorial_1Config.cmake
devel/share/nao_control_tutorial_2/cmake/: nao_control_tutorial_2-msg-paths.cmake  nao_control_tutorial_2Config.cmake
devel/share/tutorial7/cmake/: tutorial7-msg-paths.cmake
devel/share/tutorial7/msg/: blinkAction.msg  blinkActionFeedback.msg  blinkActionGoal.msg  blinkActionResult.msg  blinkFeedback.msg  blinkGoal.msg  blinkResult.msg
devel/share/tutorial_1/cmake/: tutorial_1Config.cmake
devel/share/tutorial_2/cmake/: tutorial_2Config.cmake
devel/share/tutorial_3/cmake/: tutorial_3Config.cmake
src/Tutorials/nao_control_tutorial_1/: CMakeLists.txt
src/Tutorials/nao_control_tutorial_1/script/: move_service.py  (+2 more)
src/Tutorials/nao_control_tutorial_2/: CMakeLists.txt  package.xml
src/Tutorials/nao_control_tutorial_2/launch/: nao.launch
src/Tutorials/nao_control_tutorial_2/rviz/: naocontrol.rviz
src/Tutorials/nao_control_tutorial_2/script/: handtracking.py  move_service.py  tfbroadcast.py
src/Tutorials/nao_control_tutorial_2/srv/: MoveJoints.srv
src/Tutorials/t_05_solutionfromSerg/src/nao_control_tutorial_1/: CMakeLists.txt
src/Tutorials/t_05_solutionfromSerg/src/nao_control_tutorial_1/script/: interpolate_service.py  joint_limits_DEG.json  move_service.py
src/Tutorials/t_05_solutionfromSerg/src/nao_control_tutorial_1/src/: MarkerTracker.cpp  client.cpp
src/Tutorials/t_05_solutionfromSerg/src/nao_control_tutorial_1/srv/: InterpolateJoints.srv  MoveJoints.srv
src/Tutorials/tutorial7/: CMakeLists.txt  package.xml
src/Tutorials/tutorial7/action/: blink.action
src/Tutorials/tutorial7/script/: naotalk.py  naowalk.py
src/Tutorials/tutorial_1/: CMakeLists.txt
src/Tutorials/tutorial_2/: CMakeLists.txt  package.xml
src/Tutorials/tutorial_3/: CMakeLists.txt
src/naoXophone/: CMakeLists.txt
src/naoXophone/coordinates/: Notes.txt  initialPosForRecording.txt
src/naoXophone/launch/: naoXophone_bringup.launch  visualize.launch
src/naoXophone/rviz/: config_file.rviz
src/naoXophone/script/: arcucoBroadCast.py  arucoBroadcast.py  checkStick.py  detectNotes.py  detectNotes2.py  grabRecording.py  learnNewSong.py  notePositions.py  speechInterface.py  visual_detection.py
src/naoXophone/srv/: songName.srv  stickCheck.srv
(+97 files in other folders)
